--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=5000
-MONGO_DB_URI=mongodb+srv://myChatApp:Fyc47px0SH9XZzq8@cluster0.3edsdij.mongodb.net/chat-app-db?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=QbsrnN5cFzGEZTiCvTkahVEbbjoiq+zTw65XHM0sGWY=
-NODE_ENV=development
+PORT=
+MONGO_DB_URI=
+JWT_SECRET=
+NODE_ENV=
